--- a/q/272425.html
+++ b/q/272425.html
@@ -26,12 +26,25 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>003</td><td>Vyxal</td><td>240409T124319Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272426#272426">lyxal</a></td></tr>
-<tr d-ix="1"><td>003</td><td>MathGolf</td><td>240409T125457Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272429#272429">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>004</td><td>05AB1E</td><td>240409T124407Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272427#272427">Kevin Cr</a></td></tr>
-<tr d-ix="3"><td>006</td><td>APL+WIN</td><td>240409T124523Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272428#272428">Graham</a></td></tr>
+<tr d-ix="0"><td>003</td><td>Jelly</td><td>240409T130444Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272430#272430">lyxal</a></td></tr>
+<tr d-ix="1"><td>003</td><td>Vyxal</td><td>240409T124319Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272426#272426">lyxal</a></td></tr>
+<tr d-ix="2"><td>003</td><td>MathGolf</td><td>240409T125457Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272429#272429">Kevin Cr</a></td></tr>
+<tr d-ix="3"><td>004</td><td>05AB1E</td><td>240409T124407Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272427#272427">Kevin Cr</a></td></tr>
+<tr d-ix="4"><td>006</td><td>APL+WIN</td><td>240409T124523Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272428#272428">Graham</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 3 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 3 bytes</h1>
+<pre><code>Ṭ¬Y
+</code></pre>
+<p><a href="https://tio.run/##y0rNyan8///hzjWH1kT@///fAgA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
+<h2>Explained</h2>
+<pre><code>Ṭ¬Y
+Ṭ   # Untruth (Return a Boolean array with 1s at the indices in z.)
+ ¬  # Logical negation
+  Y # Join on newlines
+
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 3 bytes</h1>
 <pre><code>ʀ&gt;ṅ
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLKgD7huYUiLCIiLCI0Il0=" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -44,7 +57,7 @@
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/maxbergmark/mathgolf/blob/master/math_golf.txt" rel="nofollow noreferrer">MathGolf</a>, 3 <a href="https://github.com/maxbergmark/mathgolf/blob/master/code_page.py" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/maxbergmark/mathgolf/blob/master/math_golf.txt" rel="nofollow noreferrer">MathGolf</a>, 3 <a href="https://github.com/maxbergmark/mathgolf/blob/master/code_page.py" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>Ä10
 </code></pre>
 <p><a href="https://tio.run/##y00syUjPz0n7//9wi6HB//8GXIZcplyGBgA" rel="nofollow noreferrer">Try it online.</a></p>
@@ -57,7 +70,7 @@
      # (after which the entire stack is joined and output implicitly as result)
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 4 <a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 4 <a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>Ý¦°O
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f//8NxDyw5t8P//3xQA" rel="nofollow noreferrer">Try it online.</a></p>
@@ -70,7 +83,7 @@
 </code></pre>
 <p>NOTE: <code>Ý¦</code> cannot be <code>L</code>, because for edge-case <span class="math-container">\$n=0\$</span> it will result in list <span class="math-container">\$[1,0]\$</span>.</p>
 </div>
-<div id="pu3" class="pu"><h1>APL+WIN, 6 bytes</h1>
+<div id="pu4" class="pu"><h1>APL+WIN, 6 bytes</h1>
 <p>Prompts for integer input:</p>
 <pre><code>⌽0,⎕⍴1
 </code></pre>
