--- a/q/272425.html
+++ b/q/272425.html
@@ -26,13 +26,27 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>003</td><td>Jelly</td><td>240409T130444Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272430#272430">lyxal</a></td></tr>
-<tr d-ix="1"><td>003</td><td>Vyxal</td><td>240409T124319Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272426#272426">lyxal</a></td></tr>
-<tr d-ix="2"><td>003</td><td>MathGolf</td><td>240409T125457Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272429#272429">Kevin Cr</a></td></tr>
-<tr d-ix="3"><td>004</td><td>05AB1E</td><td>240409T124407Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272427#272427">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>003</td><td>05AB1E</td><td>240409T124407Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272427#272427">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>003</td><td>Jelly</td><td>240409T130444Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272430#272430">lyxal</a></td></tr>
+<tr d-ix="2"><td>003</td><td>Vyxal</td><td>240409T124319Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272426#272426">lyxal</a></td></tr>
+<tr d-ix="3"><td>003</td><td>MathGolf</td><td>240409T125457Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272429#272429">Kevin Cr</a></td></tr>
 <tr d-ix="4"><td>006</td><td>APL+WIN</td><td>240409T124523Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272428#272428">Graham</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 3 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>3</s> <s>4</s> 3  <a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>Ý›J
+</code></pre>
+<p>+1 byte as bugfix (<code>L</code> results in <span class="math-container">\$[1,0]\$</span> for edge-case <span class="math-container">\$n=0\$</span>)<br />
+-1 byte thanks to <em>@lyxal</em></p>
+<p><a href="https://tio.run/##yy9OTMpM/f//8NxDyw5t8P//3xQA" rel="nofollow noreferrer">Try it online.</a></p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>Ý    # Push a list in the range [0, (implicit) input of STDIN]
+ ›   # Check for each value whether the (implicit) input is larger
+  J  # Join those 1s and 0 together
+     # (after which it is output implicitly as result to STDOUT)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 3 bytes</h1>
 <pre><code>Ṭ¬Y
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8///hzjWH1kT@///fAgA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -44,7 +58,7 @@
 
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 3 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 3 bytes</h1>
 <pre><code>ʀ&gt;ṅ
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLKgD7huYUiLCIiLCI0Il0=" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -57,7 +71,7 @@
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/maxbergmark/mathgolf/blob/master/math_golf.txt" rel="nofollow noreferrer">MathGolf</a>, 3 <a href="https://github.com/maxbergmark/mathgolf/blob/master/code_page.py" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/maxbergmark/mathgolf/blob/master/math_golf.txt" rel="nofollow noreferrer">MathGolf</a>, 3 <a href="https://github.com/maxbergmark/mathgolf/blob/master/code_page.py" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>Ä10
 </code></pre>
 <p><a href="https://tio.run/##y00syUjPz0n7//9wi6HB//8GXIZcplyGBgA" rel="nofollow noreferrer">Try it online.</a></p>
@@ -69,19 +83,6 @@
   0  # After the loop: push a 0
      # (after which the entire stack is joined and output implicitly as result)
 </code></pre>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 4 <a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">bytes</a></h1>
-<pre><code>Ý¦°O
-</code></pre>
-<p><a href="https://tio.run/##yy9OTMpM/f//8NxDyw5t8P//3xQA" rel="nofollow noreferrer">Try it online.</a></p>
-<p><strong>Explanation:</strong></p>
-
-<pre class="lang-python prettyprint-override"><code>Ý¦    # Push a list in the range [1, (implicit) input of STDIN]
-  °   # Map each to 10**value
-   O  # Take the sum of this list
-      # (after which the result is output implicitly to STDOUT)
-</code></pre>
-<p>NOTE: <code>Ý¦</code> cannot be <code>L</code>, because for edge-case <span class="math-container">\$n=0\$</span> it will result in list <span class="math-container">\$[1,0]\$</span>.</p>
 </div>
 <div id="pu4" class="pu"><h1>APL+WIN, 6 bytes</h1>
 <p>Prompts for integer input:</p>
