--- a/q/272425.html
+++ b/q/272425.html
@@ -26,24 +26,42 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>005</td><td>Uiua 0.10.0</td><td>240409T131144Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272431#272431">Tbw</a></td></tr>
-<tr d-ix="1"><td>003</td><td>05AB1E</td><td>240409T124407Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272427#272427">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>003</td><td>Jelly</td><td>240409T130444Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272430#272430">lyxal</a></td></tr>
-<tr d-ix="3"><td>003</td><td>Vyxal</td><td>240409T124319Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272426#272426">lyxal</a></td></tr>
-<tr d-ix="4"><td>003</td><td>MathGolf</td><td>240409T125457Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272429#272429">Kevin Cr</a></td></tr>
-<tr d-ix="5"><td>006</td><td>APL+WIN</td><td>240409T124523Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272428#272428">Graham</a></td></tr>
+<tr d-ix="0"><td>011</td><td>Brainfuck+2</td><td>240409T131959Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272432#272432">None1</a></td></tr>
+<tr d-ix="1"><td>004</td><td>Uiua 0.10.0</td><td>240409T131144Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272431#272431">Tbw</a></td></tr>
+<tr d-ix="2"><td>003</td><td>05AB1E</td><td>240409T124407Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272427#272427">Kevin Cr</a></td></tr>
+<tr d-ix="3"><td>003</td><td>Jelly</td><td>240409T130444Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272430#272430">lyxal</a></td></tr>
+<tr d-ix="4"><td>003</td><td>Vyxal</td><td>240409T124319Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272426#272426">lyxal</a></td></tr>
+<tr d-ix="5"><td>003</td><td>MathGolf</td><td>240409T125457Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272429#272429">Kevin Cr</a></td></tr>
+<tr d-ix="6"><td>006</td><td>APL+WIN</td><td>240409T124523Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272428#272428">Graham</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua 0.10.0</a>, 5 bytes</h1>
-<pre><code>&gt;⇡+1.
+<div id="pu0" class="pu"><h2><a href="https://esolangs.org/wiki/Brainfuck%2B2" rel="nofollow noreferrer">Brainfuck+2</a>, 11 bytes</h2>
+<pre><code>;[&gt;+:-&lt;-]&gt;:
 </code></pre>
-<p><a href="https://uiua.org/pad?src=0_10_1__RiDihpAgPuKHoSsxLgoKRiA4Cg==" rel="nofollow noreferrer">Try on Uiua Pad!</a></p>
+<p><a href="https://none-none1.github.io/Interpret-Esolangs-Online/?lang=QnJhaW5mdWNrKzI_&amp;code=Jzs@O1s8Kz4tXTw6&amp;input=MTIzIDQ1Ngo_#QnJhaW5mdWNrJTJCMgAlM0IlNUIlM0UlMkIlM0EtJTNDLSU1RCUzRSUzQQAxMQ==" rel="nofollow noreferrer">Try it online</a></p>
+<h3>Explanation</h3>
+<pre><code>; Input x as decimal number (only 0 to 255 are supported)
+[ While x is nonzero
+&gt;+:-&lt; Print 1
+- Decrement x
+]
+&gt;: Print 0
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua 0.10.0</a>, 4 bytes</h1>
+<pre><code>±⇡+1
+</code></pre>
+<p><a href="https://uiua.org/pad?src=0_10_1__RiDihpAgwrHih6ErMQoKRiA4Cg==" rel="nofollow noreferrer">Try on Uiua Pad!</a></p>
 <p>Returns a list of 1s and 0s.</p>
 <h2>8 bytes</h2>
 <pre><code>⇌[@0⍥@1]
 </code></pre>
 <p>Returns a string.</p>
+<h2>6 bytes</h2>
+<pre><code>0⍥&amp;p‿1
+</code></pre>
+<p>Prints the 1s then puts 0 on stack after.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>3</s> <s>4</s> 3  <a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>3</s> <s>4</s> 3  <a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>Ý›J
 </code></pre>
 <p>+1 byte as bugfix (<code>L</code> results in <span class="math-container">\$[1,0]\$</span> for edge-case <span class="math-container">\$n=0\$</span>)<br />
@@ -57,7 +75,7 @@
      # (after which it is output implicitly as result to STDOUT)
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 3 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 3 bytes</h1>
 <pre><code>Ṭ¬Y
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8///hzjWH1kT@///fAgA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -69,7 +87,7 @@
 
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 3 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 3 bytes</h1>
 <pre><code>ʀ&gt;ṅ
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLKgD7huYUiLCIiLCI0Il0=" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -82,7 +100,7 @@
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/maxbergmark/mathgolf/blob/master/math_golf.txt" rel="nofollow noreferrer">MathGolf</a>, 3 <a href="https://github.com/maxbergmark/mathgolf/blob/master/code_page.py" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/maxbergmark/mathgolf/blob/master/math_golf.txt" rel="nofollow noreferrer">MathGolf</a>, 3 <a href="https://github.com/maxbergmark/mathgolf/blob/master/code_page.py" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>Ä10
 </code></pre>
 <p><a href="https://tio.run/##y00syUjPz0n7//9wi6HB//8GXIZcplyGBgA" rel="nofollow noreferrer">Try it online.</a></p>
@@ -95,7 +113,7 @@
      # (after which the entire stack is joined and output implicitly as result)
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1>APL+WIN, 6 bytes</h1>
+<div id="pu6" class="pu"><h1>APL+WIN, 6 bytes</h1>
 <p>Prompts for integer input:</p>
 <pre><code>⌽0,⎕⍴1
 </code></pre>
