--- a/q/201508.html
+++ b/q/201508.html
@@ -26,11 +26,11 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>6359</td><td>JS 63 .. 59 Bytes</td><td>240304T085512Z</td><td><a href="https://codegolf.stackexchange.com/questions/201508/vowels-up-consonants-down/271518#271518">Adam Bas</a></td></tr>
-<tr d-ix="1"><td>9459</td><td>Scala 3</td><td>231225T091523Z</td><td><a href="https://codegolf.stackexchange.com/questions/201508/vowels-up-consonants-down/268748#268748">138 Aspe</a></td></tr>
-<tr d-ix="2"><td>009</td><td>Pip</td><td>240302T012643Z</td><td><a href="https://codegolf.stackexchange.com/questions/201508/vowels-up-consonants-down/271473#271473">DLosc</a></td></tr>
-<tr d-ix="3"><td>088</td><td>Swift</td><td>231231T195053Z</td><td><a href="https://codegolf.stackexchange.com/questions/201508/vowels-up-consonants-down/268893#268893">macOSist</a></td></tr>
-<tr d-ix="4"><td>145</td><td>YASEPL</td><td>240212T194232Z</td><td><a href="https://codegolf.stackexchange.com/questions/201508/vowels-up-consonants-down/270029#270029">madeforl</a></td></tr>
+<tr d-ix="0"><td>140</td><td>YASEPL</td><td>240212T194232Z</td><td><a href="https://codegolf.stackexchange.com/questions/201508/vowels-up-consonants-down/270029#270029">madeforl</a></td></tr>
+<tr d-ix="1"><td>6359</td><td>JS 63 .. 59 Bytes</td><td>240304T085512Z</td><td><a href="https://codegolf.stackexchange.com/questions/201508/vowels-up-consonants-down/271518#271518">Adam Bas</a></td></tr>
+<tr d-ix="2"><td>9459</td><td>Scala 3</td><td>231225T091523Z</td><td><a href="https://codegolf.stackexchange.com/questions/201508/vowels-up-consonants-down/268748#268748">138 Aspe</a></td></tr>
+<tr d-ix="3"><td>009</td><td>Pip</td><td>240302T012643Z</td><td><a href="https://codegolf.stackexchange.com/questions/201508/vowels-up-consonants-down/271473#271473">DLosc</a></td></tr>
+<tr d-ix="4"><td>088</td><td>Swift</td><td>231231T195053Z</td><td><a href="https://codegolf.stackexchange.com/questions/201508/vowels-up-consonants-down/268893#268893">macOSist</a></td></tr>
 <tr d-ix="5"><td>014</td><td>Uiua SBCS</td><td>240212T060119Z</td><td><a href="https://codegolf.stackexchange.com/questions/201508/vowels-up-consonants-down/270009#270009">chunes</a></td></tr>
 <tr d-ix="6"><td>045</td><td>R</td><td>231231T200142Z</td><td><a href="https://codegolf.stackexchange.com/questions/201508/vowels-up-consonants-down/268895#268895">Giuseppe</a></td></tr>
 <tr d-ix="7"><td>045</td><td>APLNARS</td><td>231225T184731Z</td><td><a href="https://codegolf.stackexchange.com/questions/201508/vowels-up-consonants-down/268758#268758">Rosario</a></td></tr>
@@ -89,7 +89,11 @@
 <tr d-ix="60"><td>007</td><td>Japt v2.0a0</td><td>200322T164206Z</td><td><a href="https://codegolf.stackexchange.com/questions/201508/vowels-up-consonants-down/201516#201516">Shaggy</a></td></tr>
 <tr d-ix="61"><td>007</td><td>Jelly</td><td>200322T163218Z</td><td><a href="https://codegolf.stackexchange.com/questions/201508/vowels-up-consonants-down/201512#201512">Jonathan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h2>JS 63 .. 59 Bytes</h2>
+<div id="pu0" class="pu"><h1><a href="https://github.com/madeforlosers/YASEPL-esolang/" rel="nofollow noreferrer">YASEPL</a>, <s>155 147 145</s> 140 bytes</h1>
+<pre><code>=f=2)&quot;aeiouAEIOU&quot;=1'=i=l®1`1=k=f=m¥i,1`9!y¥f,2!m}7,y,8!k$`8!+}2,10,9=j`2!j+!q$j»}7,m,2`3!j}1,90,5}2,65,5!$j+32|6`5!$j`6!k[7!-32`7!›!i+}2,l
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h2>JS 63 .. 59 Bytes</h2>
 <p>Hello this is how you can create it in JS using one line of code.</p>
 <h3>Code:</h3>
 <pre><code>f=s=&gt;s.toLowerCase().replace(/[aeiou]/g,v=&gt;v.toUpperCase())
@@ -250,7 +254,7 @@ runTest("rAnDoMT3XT", "rAndOmt3xt");</code></pre>
 </div>
 </p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, <del>94</del> 59 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, <del>94</del> 59 bytes</h1>
 <p>59 bytes(Saved 35 bytes thanks to @movatica). <a href="https://ato.pxeger.com/run?1=PY49CgIxEIV7TzGm2gW1sZGVFcTGQitZLERkjLMSiUlIsv4gnsRGC628kLdxcMFm3rw3j4-5vYJEjd33QrTp5DQqI5afk13vSEaYsoVLA2BDJezZJOi3IYOh93hezKJXZrtMMyiMipD_mgCO06hNUiZiTFrbFsyt15umSFO-Xxs8DqihzKAGQD74b88qlu3ep7_qRDuxR_IjDNTZo0tkPlBMRFK2EtKayN8EkKnkZuEceSAdiIMa8bjWer_X-gU" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <pre class="lang-scala prettyprint-override"><code>_.toLowerCase.map(c=&gt;if(&quot;aeiou&quot;contains c)c.toUpper else c)
 </code></pre>
@@ -259,7 +263,7 @@ runTest("rAnDoMT3XT", "rAndOmt3xt");</code></pre>
 <pre class="lang-scala prettyprint-override"><code>_.toLowerCase.map{case'a'=&gt;'A';case'e'=&gt;'E';case'i'=&gt;'I';case'o'=&gt;'O';case'u'=&gt;'U';case c=&gt;c}
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/dloscutoff/pip" rel="nofollow noreferrer">Pip</a>, 9 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/dloscutoff/pip" rel="nofollow noreferrer">Pip</a>, 9 bytes</h1>
 <pre><code>LCaRXVUC_
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m724ILNgwYKlpSVpuhYrfZwTgyLCQp3jIXyo8E2DaKWQjFSFwNLM5GwFp6L88jwFt_wKBa_S3IJiBf-y1CIFkLRPYlWlgkt-up5SLFQjAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -271,14 +275,9 @@ LCa        ; Lowercase the input string
       UC_  ;  with itself uppercased
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1>Swift, <s>95</s> 88 bytes</h1>
+<div id="pu4" class="pu"><h1>Swift, <s>95</s> 88 bytes</h1>
 <pre class="lang-swift prettyprint-override"><code>let c={($0+&quot;&quot;).map{&quot;aeiouAEIOU&quot;.contains($0) ?$0.uppercased():$0.lowercased()}.joined()}
 </code></pre>
-</div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/madeforlosers/YASEPL-esolang/" rel="nofollow noreferrer">YASEPL</a>, <s>155</s> <s>147</s> 145 bytes</h1>
-<pre><code>=2)&quot;aeiouAEIOU&quot;±&quot;&quot;=1'=i=l®1`1=k=f=m¥i,1`9!y¥f,2!m}7,y,8!k$`8!f+}2,10,9=j`2!j+!q$j»}7,m,2`3!j}1,90,5}2,65,5!f$j+32|6`5!f$j`6!k[7!f-32`7!f›!i+}2,l
-</code></pre>
-<p>i mistakenly uploaded this without testing my code. whoopsies, heres a fixed version</p>
 </div>
 <div id="pu5" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a> <sup><a href="https://tinyurl.com/Uiua-SBCS-Jan-14" rel="nofollow noreferrer">SBCS</a></sup>, 14 bytes</h1>
 <pre><code>¯⍜▽¯∊,&quot;AEIOU&quot;⌵
