--- a/q/272425.html
+++ b/q/272425.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>025</td><td>Brainfuck</td><td>240409T141233Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272436#272436">matteo_c</a></td></tr>
-<tr d-ix="1"><td>022</td><td>Python 2</td><td>240409T132525Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272433#272433">Mukundan</a></td></tr>
+<tr d-ix="0"><td>020</td><td>Python 2</td><td>240409T132525Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272433#272433">Mukundan</a></td></tr>
+<tr d-ix="1"><td>025</td><td>Brainfuck</td><td>240409T141233Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272436#272436">matteo_c</a></td></tr>
 <tr d-ix="2"><td>042</td><td>Haskell</td><td>240409T141048Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272435#272435">totallyh</a></td></tr>
 <tr d-ix="3"><td>003</td><td>Jelly</td><td>240409T135658Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272434#272434">Jonathan</a></td></tr>
 <tr d-ix="4"><td>011</td><td>Brainfuck+2</td><td>240409T131959Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272432#272432">None1</a></td></tr>
@@ -38,20 +38,20 @@
 <tr d-ix="9"><td>003</td><td>MathGolf</td><td>240409T125457Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272429#272429">Kevin Cr</a></td></tr>
 <tr d-ix="10"><td>006</td><td>APL+WIN</td><td>240409T124523Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272428#272428">Graham</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/TryItOnline/brainfuck" rel="nofollow noreferrer">Brainfuck</a>, 25 bytes</h1>
-<pre><code>-[&gt;+&lt;-----]&gt;--&gt;,[&lt;.&gt;-]&lt;-.
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 20 bytes</h1>
+<p><em>-3 byte thanks to <a href="https://codegolf.stackexchange.com/users/53748/jonathan-allan">@Jonathan Allan</a></em></p>
+<pre class="lang-python prettyprint-override"><code>print'1'*input()+'0'
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m70yqSgxMy-tNDl7wYKlpSVpuhY7daPttG10QSDWTlfXTifaRs9ON9ZGVw8iD1W2YKEihAEA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 22 bytes</h1>
-<p><em>-1 byte thanks to <a href="https://codegolf.stackexchange.com/users/53748/jonathan-allan">@Jonathan Allan</a></em></p>
-<pre class="lang-python prettyprint-override"><code>print 10**input()/9*10
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m728oLIkIz_PaMGa8ozMnFSFkKLSVKuYpaUlaboW2wqKMvNKFAwNtLQy8wpKSzQ09S21DA0gkgug1GoDLkMuIy5jLhMuU4gQAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m728oLIkIz_PaMGa8ozMnFSFkKLSVKuYpaUlaboWWwqKMvNK1A3VtTLzCkpLNDS11Q3UIVILoNRqAy5DLiMuYy4TLlOIEAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <h1><a href="https://www.python.org" rel="nofollow noreferrer">Python3</a>, 27 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>print('1'*int(input())+'0')
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72soLIkIz9vwZryjMycVIWQotJUq5ilpSVpuha7C4oy80o01A3VtUB0Zl5BaYmGpqa2uoG6JkTFAii12oDLkMuIy5jLhMsUIgQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/TryItOnline/brainfuck" rel="nofollow noreferrer">Brainfuck</a>, 25 bytes</h1>
+<pre><code>-[&gt;+&lt;-----]&gt;--&gt;,[&lt;.&gt;-]&lt;-.
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m70yqSgxMy-tNDl7wYKlpSVpuhY7daPttG10QSDWTlfXTifaRs9ON9ZGVw8iD1W2YKEihAEA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 42 bytes</h1>
 
