--- a/q/272425.html
+++ b/q/272425.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>053</td><td>C GCC</td><td>240409T153657Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272439#272439">Mukundan</a></td></tr>
-<tr d-ix="1"><td>009</td><td>Perl 5 p</td><td>240409T150913Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272438#272438">Xcali</a></td></tr>
-<tr d-ix="2"><td>082</td><td>C++ gcc</td><td>240409T145117Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272437#272437">Someone</a></td></tr>
+<tr d-ix="0"><td>nan</td><td>C++ gcc</td><td>240409T145117Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272437#272437">Someone</a></td></tr>
+<tr d-ix="1"><td>053</td><td>C GCC</td><td>240409T153657Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272439#272439">Mukundan</a></td></tr>
+<tr d-ix="2"><td>009</td><td>Perl 5 p</td><td>240409T150913Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272438#272438">Xcali</a></td></tr>
 <tr d-ix="3"><td>020</td><td>Python 2</td><td>240409T132525Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272433#272433">Mukundan</a></td></tr>
 <tr d-ix="4"><td>025</td><td>Brainfuck</td><td>240409T141233Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272436#272436">matteo_c</a></td></tr>
 <tr d-ix="5"><td>042</td><td>Haskell</td><td>240409T141048Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272435#272435">totallyh</a></td></tr>
@@ -41,18 +41,12 @@
 <tr d-ix="12"><td>003</td><td>MathGolf</td><td>240409T125457Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272429#272429">Kevin Cr</a></td></tr>
 <tr d-ix="13"><td>006</td><td>APL+WIN</td><td>240409T124523Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272428#272428">Graham</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org" rel="nofollow noreferrer">C (GCC)</a>, 53 bytes</h1>
-<pre class="lang-c prettyprint-override"><code>main(c){for(scanf(&quot;%d&quot;,&amp;c);c--;)puts(&quot;1&quot;);puts(&quot;0&quot;);}
+<div id="pu0" class="pu"><h1><a href="https://tio.run/##Sy4o0E1PTv7/XzkzLzmnNCXVJjO/uKQoNTHXjiszr0QhNzEzT0OzGsTMsy4uSbGySs7Ms7ODsfNLS2xswEygpsy8dI08HXVDdU0bGwPr2v//DQE" rel="nofollow noreferrer">C++ (gcc)</a>, 78 bytes (-5 thanks to Mukundan314)</h1>
+<pre><code>#include&lt;iostream&gt;
+int main(){int c;for(std::cin&gt;&gt;c;c--;)puts(&quot;1&quot;);puts(&quot;0&quot;);}
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m700OT49OXnBgqWlJWm6FjdNcxMz8zSSNavT8os0ipMT89I0lFRTlHTUkjWtk3V1rTULSkuKNZQMlTStISwDIKsWohlqxoKFxhAGAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-p</code>, 9 bytes</h1>
-
-<pre class="lang-perl prettyprint-override"><code>$_=1x$_.0
-</code></pre>
-<p><a href="https://tio.run/##K0gtyjH9/18l3tawQiVez@D/f0PTf/kFJZn5ecX/dX1N9QwMDf7rFgAA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://tio.run/##Sy4o0E1PTv7/XzkzLzmnNCXVJjO/uKQoNTHXjiszr0QhNzEzT0OzGsTMsy4uSbGySs7Ms7ODsfNLS2xswEygpsy8dI08HXVDdU0bGwPr2v//DQE" rel="nofollow noreferrer">C++ (gcc)</a>, 82 bytes</h1>
+<p>Similar idea to the original, but using <code>for</code> loops and <code>puts</code>.</p>
+<h1><a href="https://tio.run/##Sy4o0E1PTv7/XzkzLzmnNCXVJjO/uKQoNTHXjiszr0QhNzEzT0OzGsTMsy4uSbGySs7Ms7ODsfNLS2xswEygpsy8dI08HXVDdU0bGwPr2v//DQE" rel="nofollow noreferrer">C++ (gcc)</a>, 82 bytes (OG)</h1>
 <pre><code>#include&lt;iostream&gt;
 int main(){int n;std::cin&gt;&gt;n;std::cout&lt;&lt;std::string(n,'1')&lt;&lt;0;}­⁡​‎‎
 </code></pre>
@@ -70,6 +64,17 @@ int main(){                                                   }  # ‎⁢Initiat
 💎
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org" rel="nofollow noreferrer">C (GCC)</a>, 53 bytes</h1>
+<pre class="lang-c prettyprint-override"><code>main(c){for(scanf(&quot;%d&quot;,&amp;c);c--;)puts(&quot;1&quot;);puts(&quot;0&quot;);}
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m700OT49OXnBgqWlJWm6FjdNcxMz8zSSNavT8os0ipMT89I0lFRTlHTUkjWtk3V1rTULSkuKNZQMlTStISwDIKsWohlqxoKFxhAGAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-p</code>, 9 bytes</h1>
+
+<pre class="lang-perl prettyprint-override"><code>$_=1x$_.0
+</code></pre>
+<p><a href="https://tio.run/##K0gtyjH9/18l3tawQiVez@D/f0PTf/kFJZn5ecX/dX1N9QwMDf7rFgAA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 20 bytes</h1>
 <p><em>-3 byte thanks to <a href="https://codegolf.stackexchange.com/users/53748/jonathan-allan">@Jonathan Allan</a></em></p>
