--- a/q/49781.html
+++ b/q/49781.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>039</td><td>Uiua</td><td>240408T143910Z</td><td><a href="https://codegolf.stackexchange.com/questions/49781/extendify-the-ascii-sun/272414#272414">noodle m</a></td></tr>
+<tr d-ix="0"><td>038</td><td>Uiua</td><td>240408T143910Z</td><td><a href="https://codegolf.stackexchange.com/questions/49781/extendify-the-ascii-sun/272414#272414">noodle m</a></td></tr>
 <tr d-ix="1"><td>020</td><td>Vyxal</td><td>240406T003524Z</td><td><a href="https://codegolf.stackexchange.com/questions/49781/extendify-the-ascii-sun/272371#272371">emanresu</a></td></tr>
 <tr d-ix="2"><td>080</td><td>Haskell</td><td>210621T152620Z</td><td><a href="https://codegolf.stackexchange.com/questions/49781/extendify-the-ascii-sun/230214#230214">Lynn</a></td></tr>
 <tr d-ix="3"><td>025</td><td>Japt</td><td>190125T231554Z</td><td><a href="https://codegolf.stackexchange.com/questions/49781/extendify-the-ascii-sun/179124#179124">Shaggy</a></td></tr>
@@ -68,18 +68,13 @@
 <tr d-ix="39"><td>038</td><td>CJam</td><td>150507T212327Z</td><td><a href="https://codegolf.stackexchange.com/questions/49781/extendify-the-ascii-sun/49784#49784">Optimize</a></td></tr>
 <tr d-ix="40"><td>052</td><td>Pyth</td><td>150507T211009Z</td><td><a href="https://codegolf.stackexchange.com/questions/49781/extendify-the-ascii-sun/49782#49782">Maltysen</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Uiua, <s>46</s> <s>44</s> <s>42</s> <s>40</s> 39 bytes</h1>
+<div id="pu0" class="pu"><h1>Uiua, <s>46</s> <s>44</s> <s>42</s> <s>40</s> <s>39</s> 38 bytes</h1>
 <p><sup><a href="https://codegolf.stackexchange.com/a/256052/108687">crossed out 44 is still regular 44 :(</a></sup></p>
-<pre><code>⊏↧5/+×+1⇡4⇌=0[⍉.⊞⟜⊃-+.]-⇡+1×2.:$  /\-|O
+<pre><code>⊏↧5/◇+×+1⇡4{⇌.⊞=.⊙⟜¤⟜=}⇡+1×2.:$  /\-|O
 </code></pre>
-<p><a href="https://uiua.org/pad?src=0_10_1__RiDihpAg4oqP4oanNS8rw5crMeKHoTTih4w9MFvijYku4oqe4p-c4oqDLSsuXS3ih6ErMcOXMi46JCAgL1wtfE8KCuKJoSZwIEYgMAriiaEmcCBGIDEK4omhJnAgRiAyCuKJoSZwIEYgMwo=" rel="nofollow noreferrer">Try it!</a> I’m submitting this on the day of the 2024 solar eclipse, which is fitting for a challenge about the sun. (Edit - the eclipse was beautiful! I saw it at around 85%-90% coverage)</p>
-<p><s>I also like that all of my improvements have been by 2 bytes each :)</s> This time I only saved a single byte. Still, 1 is better than 0!</p>
-<p>As of my revision 42 → 40 bytes, this borrows some logic from <a href="https://codegolf.stackexchange.com/a/49785/108687">randomra’s very clever J solution</a>. This still isn’t a direct port as some parts didn’t translate so well to Uiua. (Keep in mind that although this submission is shorter than randomra's, that's not quite a fair comparison since that outputs to STDOUT and this returns a list of lines. J would save 6 bytes by outputting a character matrix.)</p>
-<p>I also have a <strong>40 bytes</strong> solution which doesn’t do any porting:</p>
-<pre><code>⊏↧5/+×+1⇡4[⍉,⇌,]↯⧻.:⊞=.⟜=⇡+1×2.:$  -/|\O
-</code></pre>
-<p><a href="https://uiua.org/pad?src=0_10_1__RiDihpAg4oqP4oanNS8rw5crMeKHoTRb4o2JLOKHjCxd4oav4qe7Ljriip49LuKfnD3ih6ErMcOXMi46JCAgLS98XE8KCuKJoSgmcCIi4omhJnAgRinih6E0Cg==" rel="nofollow noreferrer">Try it!</a></p>
-<p>Explanation of the 40 bytes:</p>
+<p><a href="https://uiua.org/pad?src=0_10_2__RiDihpAg4oqP4oanNS_il4crw5crMeKHoTR74oeMLuKKnj0u4oqZ4p-cwqTin5w9feKHoSsxw5cyLjokICAvXC18TwoK4omhKCZwIiLiiKniiaEmcEYuKeKHoTUK" rel="nofollow noreferrer">Try it!</a> I submitted this on the day of the 2024 solar eclipse, which is fitting for a challenge about the sun. (Edit - the eclipse was beautiful! I saw it at around 85%-90% coverage)</p>
+<p>At one point this borrowed some logic from <a href="https://codegolf.stackexchange.com/a/49785/108687">randomra’s very clever J solution</a>, but I found a shorter solution using a different method.</p>
+<p>Outdated explanation:</p>
 <p>Consider the input 3. We double this and add 1 to get the side length 7.</p>
 <p>From this we start with the identity matrix, and a reversed copy:</p>
 <pre><code>0 0 0 0 0 0 1    1 0 0 0 0 0 0
