--- a/q/143839.html
+++ b/q/143839.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>089</td><td>Perl 5 p</td><td>231218T224209Z</td><td><a href="https://codegolf.stackexchange.com/questions/143839/the-three-rs-reverse-reorder-repeat/268631#268631">Xcali</a></td></tr>
-<tr d-ix="1"><td>183</td><td>TypeScript’s type system</td><td>231214T174944Z</td><td><a href="https://codegolf.stackexchange.com/questions/143839/the-three-rs-reverse-reorder-repeat/268549#268549">noodle m</a></td></tr>
-<tr d-ix="2"><td>008</td><td>Vyxal 3 j</td><td>231215T131541Z</td><td><a href="https://codegolf.stackexchange.com/questions/143839/the-three-rs-reverse-reorder-repeat/268561#268561">Pacmanbo</a></td></tr>
+<tr d-ix="0"><td>183</td><td>TypeScript’s type system</td><td>231214T174944Z</td><td><a href="https://codegolf.stackexchange.com/questions/143839/the-three-rs-reverse-reorder-repeat/268549#268549">noodle m</a></td></tr>
+<tr d-ix="1"><td>089</td><td>Perl 5 p</td><td>231218T224209Z</td><td><a href="https://codegolf.stackexchange.com/questions/143839/the-three-rs-reverse-reorder-repeat/268631#268631">Xcali</a></td></tr>
+<tr d-ix="2"><td>008</td><td>Vyxal 3 j</td><td>231215T131541Z</td><td><a href="https://codegolf.stackexchange.com/questions/143839/the-three-rs-reverse-reorder-repeat/268561#268561">pacman25</a></td></tr>
 <tr d-ix="3"><td>033</td><td>GolfScript</td><td>200110T092344Z</td><td><a href="https://codegolf.stackexchange.com/questions/143839/the-three-rs-reverse-reorder-repeat/197871#197871">user8505</a></td></tr>
 <tr d-ix="4"><td>012</td><td>Japt</td><td>170927T110127Z</td><td><a href="https://codegolf.stackexchange.com/questions/143839/the-three-rs-reverse-reorder-repeat/143863#143863">Shaggy</a></td></tr>
 <tr d-ix="5"><td>017</td><td>Stax</td><td>180514T194643Z</td><td><a href="https://codegolf.stackexchange.com/questions/143839/the-three-rs-reverse-reorder-repeat/164815#164815">Multi</a></td></tr>
@@ -52,19 +52,13 @@
 <tr d-ix="23"><td>142</td><td>Mathematica</td><td>170927T031355Z</td><td><a href="https://codegolf.stackexchange.com/questions/143839/the-three-rs-reverse-reorder-repeat/143843#143843">ZaMoC</a></td></tr>
 <tr d-ix="24"><td>010</td><td>Jelly</td><td>170927T024622Z</td><td><a href="https://codegolf.stackexchange.com/questions/143839/the-three-rs-reverse-reorder-repeat/143841#143841">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-p</code>, 89 bytes</h1>
-
-<pre class="lang-perl prettyprint-override"><code>$_=$;=join$&quot;,1..$_;do{$_=join$&quot;,reverse/\d+/g;s/(\d+) (\d+)/$2 $1/g;$\+=say}until$;eq$_}{
-</code></pre>
-<p><a href="https://tio.run/##K0gtyjH9/18l3lbF2jYrPzNPRUnHUE9PJd46Jb8aKAoVKkotSy0qTtWPSdHWT7cu1tcAMjQVwKS@ipGCiiFQVCVG27Y4sbK2NK8kM0fFOrVQJb62@v9/k3/5BSWZ@XnF/3V9TfUMDA3@6xbkAAA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://typescriptlang.org/" rel="nofollow noreferrer">TypeScript</a>’s type system, <s>203</s> <s>193</s> <s>190</s> 183 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://typescriptlang.org/" rel="nofollow noreferrer">TypeScript</a>’s type system, <s>203</s> <s>193</s> <s>190</s> 183 bytes</h1>
 <pre class="lang-typescript prettyprint-override"><code>//@ts-ignore
 type F&lt;N,A=[],E=A,O=N,G=[...N,...A]&gt;=N extends[1,...infer D]?F&lt;D,[N,...A]&gt;:A extends[...infer R,infer X,infer Y]?F&lt;[...N,X,Y],R,E,O&gt;:E extends O[any]?O:F&lt;[],G,E,[...O,G]&gt;
 </code></pre>
 <p><a href="https://www.typescriptlang.org/play?#code/PTACBcGcFoEsHMB2B7ATgUwLAChwE8AHdAAgDEAeAOQBoBBAXgG0BdagUXtuoHl6aBxJgDoRNEUNrMAfH2LoAHuHSIAJpEYBGauNiIAZulTEAIswD8FY9UZiRkqQC5acxcrWMd+w8QBK1XQZGABr+XkYAmuYUHqLUIZHUfmw8jmwuSqqQxNyMAIaIeObcDtGs-OzW4tzU-NI4OPhExFn0ZOSa1FpdnXXYDYQkucSt6gAMzDggxNMAemb9TQBGw82aE9hTs-O4A8QAxivqAEzrm8RzCyQqh4wAzKfA0+fbjSQkI4wALA9PF9hAA" rel="nofollow noreferrer">Try it at the TS playground</a></p>
-<p>This is a generic type <code>F</code>, which takes input as a tuple type of 1s representing a unary number, and outputs a list of unary numbers in the same format.</p>
 <p>I can’t believe I got this all to fit in a single type. This is definitely one of the coolest TS types submissions I’ve posted.</p>
+<p><strong>Edit:</strong> This explanation is really chaotic because this submission itself is chaotic; I don’t blame you if it makes zero sense to you</p>
 <h2>Explanation</h2>
 <p>The <code>//@ts-ignore</code> comment on the first line tells the compiler to suppress any warnings from the following line.</p>
 <p>The beginning of the type describes its arguments:</p>
@@ -101,6 +95,12 @@ type F&lt;N,A=[],E=A,O=N,G=[...N,...A]&gt;=N extends[1,...infer D]?F&lt;D,[N,...
 <p>Otherwise, recurse with N set to the empty tuple (skipping stage 1 and going straight to stage 2), A set to G (the alias for N with A appended), E left unchanged, and O with G appended.</p>
 </li>
 </ul>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-p</code>, 89 bytes</h1>
+
+<pre class="lang-perl prettyprint-override"><code>$_=$;=join$&quot;,1..$_;do{$_=join$&quot;,reverse/\d+/g;s/(\d+) (\d+)/$2 $1/g;$\+=say}until$;eq$_}{
+</code></pre>
+<p><a href="https://tio.run/##K0gtyjH9/18l3lbF2jYrPzNPRUnHUE9PJd46Jb8aKAoVKkotSy0qTtWPSdHWT7cu1tcAMjQVwKS@ipGCiiFQVCVG27Y4sbK2NK8kM0fFOrVQJb62@v9/k3/5BSWZ@XnF/3V9TfUMDA3@6xbkAAA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a> <code>j</code>, 8 bytes</h1>
 <pre><code>ɾᶨλṚ2ẆVf
