--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/272452.html">FizzFizzFizzBuzz!                               : 0272452</a>
 <a href="q/272425.html">Fixed Repeating Output                          : 0272425</a>
 <a href="q/88653.html">Print a 10 by 10 grid of asterisks              : 0088653</a>
 <a href="q/6281.html">Draw A Sierpinski Triangle                      : 0006281</a>
