--- a/q/71312.html
+++ b/q/71312.html
@@ -190,9 +190,9 @@ Consult the original source code for understanding the above translation.</p>
     { ┄┄┄ Returns minimum of two values. Already built‑in in TI‑BASIC. ┄┄┄┄┄ }
     function minimum(protected x, y: real): real;
         type
-            tuple = array[0‥1] of real;
+            tuple = array[Boolean] of real;
         begin
-            minimum ≔ tuple[0: x; 1: y][ord(x &gt; y)]
+            minimum ≔ tuple[false: x; true: y][x &gt; y]
         end;
     { ┄┄┄ approximation procedure ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄ }
     function approximation(lowerLimit, upperLimit: real) = result: complex;
