--- a/q/272452.html
+++ b/q/272452.html
@@ -26,16 +26,31 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>081</td><td>JavaScript</td><td>240410T012656Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272456#272456">Matthew </a></td></tr>
-<tr d-ix="1"><td>925</td><td>Vyxal j</td><td>240409T234210Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272453#272453">lyxal</a></td></tr>
+<tr d-ix="0"><td>101</td><td>Python 3</td><td>240410T075442Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272464#272464">Jitse</a></td></tr>
+<tr d-ix="1"><td>081</td><td>JavaScript</td><td>240410T012656Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272456#272456">Matthew </a></td></tr>
+<tr d-ix="2"><td>925</td><td>Vyxal j</td><td>240409T234210Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272453#272453">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.javascript.com" rel="nofollow noreferrer">JavaScript</a>, 81 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 101 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>f=lambda n:n and(f(n-1)or print(g(n,3)*'Fizz'+g(n,5)*'Buzz'or n))
+g=lambda i,d:0**(i%d)and-~g(i//d,d)
+</code></pre>
+<p><a href="https://tio.run/##K6gsycjPM/7/P802JzE3KSVRIc8qTyExL0UjTSNP11Azv0ihoCgzr0QjXSNPx1hTS90ts6pKXRvEMwXynEqBPKCaPE1NrnSYCZk6KVYGWloamaopmkCTdOvSNTL19VN0UjT/p2kYGRho/gcA" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p>If we can just return the result for a single number:</p>
+<h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 76 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>lambda n:g(n,3)*'Fizz'+g(n,5)*'Buzz'or n
+g=lambda i,d:0**(i%d)and-~g(i//d,d)
+</code></pre>
+<p><a href="https://tio.run/##LcyxCsIwEIDhvU9xi/QuRtpaXAJdHHwKl8iZeKDXEtqhHXz1mILjBz//tM6vUfschnt@@8@DPaiLqLYnU99k2@rjrkvRdSkaE2gVh38qll1rDMqBySufvhGladgy5bCXIArJa3xiZ89tR64CmJLoXJYQUInyDw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.javascript.com" rel="nofollow noreferrer">JavaScript</a>, 81 bytes</h1>
 <pre class="lang-javascript prettyprint-override"><code>f=n=&gt;n&amp;&amp;f(n-1)+(g=s=&gt;h=(d,q=n/d)=&gt;q%1?'':s+h(d,q/d),g`Fizz`(3)+g`Buzz`(5)||n)+`
 `
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70kLz8ldcGCpaUlaboWNwPTbPNs7fLU1NI08nQNNbU10m2Lbe0ybDVSdApt8_RTNG3tClUN7dXVrYq1M0CCQCGd9AS3zKqqBA1jTe30BKdSENNUs6YmT1M7gSsBYvBWruT8vOL8nFS9nPx0jTQNQwMDTU1riBzMcgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="noreferrer">Vyxal</a> <code>j</code>, 74 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="noreferrer">bits<sup>v2</a></sup>, 9.25 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="noreferrer">Vyxal</a> <code>j</code>, 74 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="noreferrer">bits<sup>v2</a></sup>, 9.25 bytes</h1>
 <pre><code>ƛ35fǑkF½*∑∴
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJqPSIsIiIsIsabMzVmx5FrRsK9KuKIkeKItCIsIiIsIjIwMCJd" rel="noreferrer">Try it Online!</a></p>
