--- a/q/272452.html
+++ b/q/272452.html
@@ -26,11 +26,41 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>101</td><td>Python 3</td><td>240410T075442Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272464#272464">Jitse</a></td></tr>
-<tr d-ix="1"><td>081</td><td>JavaScript</td><td>240410T012656Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272456#272456">Matthew </a></td></tr>
-<tr d-ix="2"><td>925</td><td>Vyxal j</td><td>240409T234210Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272453#272453">lyxal</a></td></tr>
+<tr d-ix="0"><td>027</td><td>05AB1E</td><td>240410T082537Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272466#272466">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>101</td><td>Python 3</td><td>240410T075442Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272464#272464">Jitse</a></td></tr>
+<tr d-ix="2"><td>081</td><td>JavaScript</td><td>240410T012656Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272456#272456">Matthew </a></td></tr>
+<tr d-ix="3"><td>925</td><td>Vyxal j</td><td>240409T234210Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272453#272453">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 101 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 27 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>ENÓ0Þ«2Lè”FizzÒÖ”#×JDõQiN},
+</code></pre>
+<p><a href="https://tio.run/##yy9OTMpM/f/f1e/wZIPD8w6tNvI5vOJRw1y3zKqqw5MOTwMylQ9P93I5vDUw069W5/9/IwMDAA" rel="nofollow noreferrer">Try it online.</a></p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>E                           # Loop `N` in the range [1, (implicit) input]:
+ N                          #  Push the current `N`
+  Ó                         #  Pop and push a list of exponents of its prime factorization
+   0Þ«                      #  Merge an infinite list of 0s to it
+      2L                    #  Push [1,2]
+        è                   #  0-based index this 1 and 2 into the list of exponents
+         ”FizzÒÖ”           #  Push dictionary string &quot;Fizz Buzz&quot;
+                 #          #  Split it on spaces: [&quot;Fizz&quot;,&quot;Buzz&quot;]
+                  ×         #  Repeat both the exponents amount of times
+                   J        #  Join this pair of strings together
+                    D       #  Duplicate it
+                     õQi }  #  Pop the copy, and if it's equal to &quot;&quot;:
+                        N   #   Push the current `N` again
+                          , #  Pop and print the top of the stack with trailing newline
+</code></pre>
+<p><a href="https://codegolf.stackexchange.com/a/166851/52210">See this 05AB1E tip of mine (section <em>How to use the dictionary?</em>)</a> to understand why <code>”FizzÒÖ”</code> is <code>&quot;Fizz Buzz&quot;</code>.</p>
+<p>Some minor notes:</p>
+<ol>
+<li>The 0-based <span class="math-container">\$1^{st}\$</span> and <span class="math-container">\$2^{nd}\$</span> exponents of the prime factorization are those for primes <span class="math-container">\$3\$</span> and <span class="math-container">\$5\$</span>, a.k.a. the amount of times the number is evenly divisible by <span class="math-container">\$3\$</span> or <span class="math-container">\$5\$</span> respectively.</li>
+<li>The <code>0Þ«</code> is necessary because 05AB1E has modular indexing. So for the lists with only a single or two items instead of <span class="math-container">\$\geq3\$</span>, it would incorrectly retrieve that single or first item when indexing with the modular 0-based <span class="math-container">\$1\$</span> or <span class="math-container">\$2\$</span>.</li>
+<li>The <code>EN...DõQiN},</code> can be a lot of other alternatives, like <code>EN...Dai,ëN,</code>; <code>EN...Da_iN},</code>; <code>Lε...DõQiy]»</code>; <code>Lε...Daiëy]»</code>; <code>Lε...Da_iN]»</code>; etc. I've been unable to find anything shorter thus far, except for <code>EN...N‚éθ,</code> or <code>END...‚éθ,</code> (both -2 bytes), but those only works for <span class="math-container">\$n\leq1001\$</span> and <span class="math-container">\$n\leq10001\$</span> respectively.</li>
+</ol>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 101 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda n:n and(f(n-1)or print(g(n,3)*'Fizz'+g(n,5)*'Buzz'or n))
 g=lambda i,d:0**(i%d)and-~g(i//d,d)
@@ -44,13 +74,13 @@ g=lambda i,d:0**(i%d)and-~g(i//d,d)
 </code></pre>
 <p><a href="https://tio.run/##LcyxCsIwEIDhvU9xi/QuRtpaXAJdHHwKl8iZeKDXEtqhHXz1mILjBz//tM6vUfschnt@@8@DPaiLqLYnU99k2@rjrkvRdSkaE2gVh38qll1rDMqBySufvhGladgy5bCXIArJa3xiZ89tR64CmJLoXJYQUInyDw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.javascript.com" rel="nofollow noreferrer">JavaScript</a>, 81 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.javascript.com" rel="nofollow noreferrer">JavaScript</a>, 81 bytes</h1>
 <pre class="lang-javascript prettyprint-override"><code>f=n=&gt;n&amp;&amp;f(n-1)+(g=s=&gt;h=(d,q=n/d)=&gt;q%1?'':s+h(d,q/d),g`Fizz`(3)+g`Buzz`(5)||n)+`
 `
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70kLz8ldcGCpaUlaboWNwPTbPNs7fLU1NI08nQNNbU10m2Lbe0ybDVSdApt8_RTNG3tClUN7dXVrYq1M0CCQCGd9AS3zKqqBA1jTe30BKdSENNUs6YmT1M7gSsBYvBWruT8vOL8nFS9nPx0jTQNQwMDTU1riBzMcgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="noreferrer">Vyxal</a> <code>j</code>, 74 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="noreferrer">bits<sup>v2</a></sup>, 9.25 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="noreferrer">Vyxal</a> <code>j</code>, 74 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="noreferrer">bits<sup>v2</a></sup>, 9.25 bytes</h1>
 <pre><code>ƛ35fǑkF½*∑∴
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJqPSIsIiIsIsabMzVmx5FrRsK9KuKIkeKItCIsIiIsIjIwMCJd" rel="noreferrer">Try it Online!</a></p>
