--- a/q/272452.html
+++ b/q/272452.html
@@ -26,15 +26,21 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>031</td><td>Charcoal</td><td>240410T112504Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272473#272473">Neil</a></td></tr>
-<tr d-ix="1"><td>075</td><td>APL+WIN</td><td>240410T110718Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272471#272471">Graham</a></td></tr>
+<tr d-ix="0"><td>079</td><td>APL+WIN</td><td>240410T110718Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272471#272471">Graham</a></td></tr>
+<tr d-ix="1"><td>031</td><td>Charcoal</td><td>240410T112504Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272473#272473">Neil</a></td></tr>
 <tr d-ix="2"><td>087</td><td>sed E</td><td>240410T105512Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272470#272470">Philippo</a></td></tr>
 <tr d-ix="3"><td>026</td><td>05AB1E</td><td>240410T082537Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272466#272466">Kevin Cr</a></td></tr>
 <tr d-ix="4"><td>101</td><td>Python 3</td><td>240410T075442Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272464#272464">Jitse</a></td></tr>
 <tr d-ix="5"><td>081</td><td>JavaScript</td><td>240410T012656Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272456#272456">Matthew </a></td></tr>
 <tr d-ix="6"><td>925</td><td>Vyxal j</td><td>240409T234210Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272453#272453">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 31 bytes</h1>
+<div id="pu0" class="pu"><h1>APL+WIN, 79 bytes.</h1>
+<p>Prompts for integer n</p>
+<pre><code>i←1⋄n←⎕⋄⍎∊n⍴⊂'((0=⍴t)↑i),t←∊(∊+/0=1|i÷(⊂3 5)*¨⍳⌈i*.5)/''Fizz'' ''Buzz''⋄i←i+1⋄'
+</code></pre>
+<p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlyPWooz3tfyaI@ai7JQ9IA6WArEe9fY86uvIe9W551NWkrqFhYAtklmg@apuYqalTAlLW0aUBxNr6BraGNZmHt2sA1RkrmGpqHVrxqHfzo56OTC09U019dXW3zKoqdXUFdXWnUhADaDbItkxtkH3q/4HWc/1P4zI0AAA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 31 bytes</h1>
 <pre><code>ＥＮ∨ΣＥ⪪FiBu²×⁺λzz⌕Ｘ⁰⮌↨⊕ι⁺³⊗μ⁰Ｉ⊕ι
 </code></pre>
 <p><a href="https://tio.run/##XYtNCoMwFISvErJ6Qgqi3XVni@DCNtReIMYHDSRR8mPBy6fR7jqLGZiZT76Fk7PQKXGnbIBeLNDZJYZ7NCM6KBh5OBiiOZZh0SoAbVUTKSNVHl/KoAeuowfNCN02mstW2Qn4/Ml8ycgTV3QeoRHZOisdGrQBJ1D5epA1I7c5jjp3ptjFSPmLq/Dhj9l1Sak61@m06i8" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -65,23 +71,6 @@
                              ⊕  Incremented
                             Ｉ   Cast to string
                                 Implicitly print
-</code></pre>
-</div>
-<div id="pu1" class="pu"><h1>APL+WIN, 75 bytes.</h1>
-<p>Prompts for integer n</p>
-<pre><code>i←1⋄n←⎕⋄⍎∊n⍴⊂&quot;((0=⍴t)↑i),t←∊(∊+/0=1|i÷(⊂3 5)*¨⍳⌈i*.5)/&quot;Fizz&quot; &quot;Buzz&quot;⋄i←i+1⋄&quot;
-</code></pre>
-<p>Unfortunately whilst this works in APL+WIN I cannot get it to work on Dyalog Classic so no TIO. Here is the output for n=10</p>
-<pre><code>1
-2
-Fizz
-4
-Buzz
-Fizz
-7
-8
-FizzFizz
-Buzz
 </code></pre>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a> <code>-E</code>, 87 bytes</h1>
