--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240410T112809Z
+"   /golfscore                                      20240410T113250Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
 <a href="q/272452.html">FizzFizzFizzBuzz!                               : 0272452</a>
+<a href="q/2487.html">Find sum of odd numbers                         : 0002487</a>
 <a href="q/243337.html">Draw a battery indicator                        : 0243337</a>
 <a href="q/272425.html">Fixed Repeating Output                          : 0272425</a>
 <a href="q/90067.html">Output Fit numbers                              : 0090067</a>
