--- a/q/997.html
+++ b/q/997.html
@@ -87,9 +87,9 @@
 ╔════════╗║1005╟┘└┬┘╚══╝╘═╤╝╘╤╝│╙┬╜        ┌─┐
 ║14073768║╚════╝ ┌┴╖ ┌─╖ ┌┴╖┌┴╖└─┴─────────┘┌┴╖
 ║7584800 ╟───────┤?╟─┤‼╟─┤ɧ╟┤·╟─────────────┤·╟┐╔═══════╗╔══╗
-╚════════╝       ╘╤╝ ╘╤╝ ╘╤╝╘╤╝    ╔══╗┌─╖┌┐╘╤╝│║2097151║║21╟┐
- ╔═══════════════╗│   ┘   │  │     ║48╟┤−╟┤├─┤┌┘╚══╤════╝╚══╝│
- ║140737555464224╟┘  ┌────┘┌┬┘     ╚══╝╘╤╝└┘┌┘│╓─╖ │┌┐┌─╖┌─╖┌┴─╖
+╚════════╝       ╘╤╝ ╘╤╝ ╘╤╝╘╤╝   ╔═══╗┌─╖┌┐╘╤╝│║2097151║║21╟┐
+ ╔═══════════════╗│   ┘   │  │    ║−48╟┤+╟┤├─┤┌┘╚══╤════╝╚══╝│
+ ║140737555464224╟┘  ┌────┘┌┬┘    ╚═══╝╘╤╝└┘┌┘│╓─╖ │┌┐┌─╖┌─╖┌┴─╖
  ╚═══════════════╝   │ ┌───┘└─────────┐┌┴─╖ │┌┘║↔║ ├┤├┤‼╟┤↔╟┤&gt;&gt;║
 ┌────────────┐┌────┐┌┴╖│┌────────────┐├┤&lt;&lt;║ ││ ╙┬╜┌┘└┘╘╤╝╘═╝╘╤═╝
 │   ╔══╗╔═══╗├┘╓─╖ └┤·╟┘│   ╔══╗╔═══╗├┘╘╤═╝ │└─┐└─┤╔═╗┌┴╖ ┌──┘
@@ -110,6 +110,7 @@
 </code></pre>
 <p>It could probably be smaller if I hadn’t made a mistake due to which the output was back to front; I fixed that by adding an extra function to reverse the input. Otherwise I would probably have to rewrite all of it.</p>
 <p>I also made another mistake (swapping the operands in two calls to <code>‼</code>) which made it necessary to declare the extra <code>‡</code> function, but this one is so small it fits <em>inside</em> the main function and thus doesn’t add any characters!</p>
+<p><strong>Edit</strong> 13 years later: due to a breaking change in the base library, the program needed a quick fix. The character count did not change though.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal" rel="nofollow noreferrer">Vyxal</a>, 33 bytes</h1>
 <pre><code>»@Ǐ+Ẇ₃e⋏UWṡ:≠7ẏŀz→=»`| _`τ₀/3/τ∩⁋
