--- a/q/272452.html
+++ b/q/272452.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>099</td><td>Python 3</td><td>240410T075442Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272464#272464">Jitse</a></td></tr>
+<tr d-ix="0"><td>096</td><td>Python 3</td><td>240410T075442Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272464#272464">Jitse</a></td></tr>
 <tr d-ix="1"><td>109</td><td>R 4.1 and above</td><td>240410T113250Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272474#272474">Martin M</a></td></tr>
 <tr d-ix="2"><td>079</td><td>APL+WIN</td><td>240410T110718Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272471#272471">Graham</a></td></tr>
 <tr d-ix="3"><td>031</td><td>Charcoal</td><td>240410T112504Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272473#272473">Neil</a></td></tr>
@@ -35,20 +35,20 @@
 <tr d-ix="6"><td>081</td><td>JavaScript</td><td>240410T012656Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272456#272456">Matthew </a></td></tr>
 <tr d-ix="7"><td>925</td><td>Vyxal j</td><td>240409T234210Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272453#272453">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 99 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 96 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda n:n and[f(n-1),print(g(n,3)*'Fizz'+g(n,5)*'Buzz'or n)]
-g=lambda i,d:0**(i%d)and-~g(i//d,d)
+g=lambda i,d:i%d&lt;1and-~g(i//d,d)
 </code></pre>
-<p><a href="https://tio.run/##K6gsycjPM/7/P802JzE3KSVRIc8qTyExLyU6TSNP11BTp6AoM69EI10jT8dYU0vdLbOqSl0bxDMF8pxKgbz8IoU8zViudJj@TJ0UKwMtLY1M1RRNoDm6dekamfr6KTopmv/TNIwMDDT/AwA" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##K6gsycjPM/7/P802JzE3KSVRIc8qTyExLyU6TSNP11BTp6AoM69EI10jT8dYU0vdLbOqSl0bxDMF8pxKgbz8IoU8zViudJj@TJ0Uq0zVFBtDoCG6dekamfr6KTopmv/TNIwMDDT/AwA" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 <p>-1 byte thanks to Mukundan314</p>
 <p>If we can just return the result for a single number:</p>
-<h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 76 bytes</h1>
+<h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 73 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda n:g(n,3)*'Fizz'+g(n,5)*'Buzz'or n
-g=lambda i,d:0**(i%d)and-~g(i//d,d)
+g=lambda i,d:i%d&lt;1and-~g(i//d,d)
 </code></pre>
-<p><a href="https://tio.run/##LcyxCsIwEIDhvU9xi/QuRtpaXAJdHHwKl8iZeKDXEtqhHXz1mILjBz//tM6vUfschnt@@8@DPaiLqLYnU99k2@rjrkvRdSkaE2gVh38qll1rDMqBySufvhGladgy5bCXIArJa3xiZ89tR64CmJLoXJYQUInyDw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##K6gsycjPM/6fZhvzPycxNyklUSHPKl0jT8dYU0vdLbOqSl0bxDMF8pxKgbz8IoU8rnRbqNJMnRSrTNUUG8PEvBTdunSNTH39FJ0Uzf9pIGUKmXkKRYl56akahjpGBoaaVlwKCgVFmXklQPMU0jTyNDX/AwA" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1>R 4.1 and above, 109 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>p=paste0;i=ifelse;a=\(x,y)i(x%%3,i(x%%5,y,p(&quot;Buzz&quot;,a(x/5,&quot;&quot;))),p(&quot;Fizz&quot;,a(x/3,&quot;&quot;)));cat(a(1:n,1:n),sep=&quot;\n&quot;)
